--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <h1>{{title}}</h1>
-<input type="text" name="title" [(ngModel)]="title">
+
+<div class="produtos">
+  <div *ngFor="let produto of produtos">
+    <caption>{{produto.getNome()}}</caption>
+    <sub>{{produto.getValor()}}</sub>
+    <button>Comprar</button>
+    <hr>
+  </div>
+</div>
