--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,27 @@
-<h1>{{title}}</h1>
+<h2>{{title}}</h2>
 
 <div class="produtos">
   <div *ngFor="let produto of produtos">
     <caption>{{produto.getNome()}}</caption>
     <sub>{{produto.getValor()}}</sub>
-    <button>Comprar</button>
+    <button (click)="adicionaCarrinho(produto)">Comprar</button>
     <hr>
   </div>
+</div>
+
+<br>
+<h2>Carrinho</h2>
+<div class="carrinho">
+  <table>
+    <tr>
+      <th>Produto</th>
+      <th>Unid.</th>
+      <th>Preço</th>
+    </tr>
+    <tr *ngFor="let produto of carrinho">
+      <td>{{produto.getNome()}}</td>
+      <td>{{produto.getQtd()}}</td>
+      <td>{{produto.getValor()}}</td>
+    </tr>
+  </table>
 </div>
