feat: adicionado o total da compra

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,4 +24,5 @@
       <td>{{produto.getValor()}}</td>
     </tr>
   </table>
+  <span *ngIf="total>0">Total da Compra <b>{{total}}</b></span>
 </div>
