--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,7 @@
     height: 3em;
     box-shadow: 0px 3px 12px #d8d8d8;
     border-radius: 3px;
+    max-width: 500px;
 }
 
 .nomeprod {
@@ -20,6 +21,13 @@
 .comprar {
     float: right;
     margin: .3em;
+    border: 1px solid #b2b2b2;
+    border-radius: 2px;
+    box-shadow: 0px 2px 5px #38383844;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 table {
@@ -27,6 +35,7 @@ table {
 }
 
 .carrinho, th {
+    max-width: 500px;
     border: 1px solid #d8d8d8;
     border-radius: 3px;
 }
